Added interval syntax

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Document</title>
     </head>
     <body>
+        <p id="countdown">Your downlaod button will open in 10 seconds </p>
+        <button id="download" disabled >Download</button>
         <script src="./script.js"></script>
     </body>
     </html>
