added alert commends

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <title>Document</title>
     </head>
     <body>
-        <p id="countdown">Your downlaod button will open in 10 seconds </p>
-        <button id="download" disabled >Download</button>
+        <!-- <p id="countdown">Your downlaod button will open in 10 seconds </p>
+        <button id="download" disabled >Download</button> -->
+        <!-- <button id="button">clickMe!</button> -->
+         <!-- <div id="divElement">Hover Click me!</div> -->
         <script src="./script.js"></script>
     </body>
     </html>
