added the Task detail

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <button id="download" disabled >Download</button> -->
         <!-- <button id="button">clickMe!</button> -->
          <!-- <div id="divElement">Hover Click me!</div> -->
-        <script src="./script.js"></script>
+          <!-- <button id="Download" disabled>Download</button> -->
+           <div id ="divElement">Hover Hover Me!</div>
+
+        <script src="./task.js"></script>
     </body>
     </html>
